--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Swapify - Página de Inicio</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800">
 
