--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -1,5 +1,6 @@
 <th:block th:fragment="scripts">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/js/card.js"></script>
+    <script src="/js/detalle.js"></script>
     <script src="/js/footer.js"></script>
 </th:block>
