--- a/src/main/resources/templates/fragments/filtros.html
+++ b/src/main/resources/templates/fragments/filtros.html
@@ -1,4 +1,4 @@
-<section th:fragment="filters"
+<section th:fragment="filtros"
          class="bg-white w-screen fixed top-16 z-40 border-b py-4">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between px-6 gap-4">
 
@@ -36,7 +36,7 @@
 
             <a th:if="${usuario == null}"
                href="/login"
-               title="Inicia sesión para publicar"
+               title="Inicia sesión para subir una publicación"
                class="flex items-center justify-center w-12 h-12 bg-white text-gray-400 rounded-full hover:bg-gray-100 transition">
                 <span class="material-icons">add</span>
             </a>
