--- a/src/main/resources/templates/cardAReutilizar.html
+++ b/src/main/resources/templates/cardAReutilizar.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
-        <script defer src="/static/js/card.js"></script>
+        <script defer src="/js/tarjeta.js"></script>
     </head>
     <body class="bg-gray-100 min-h-screen flex items-center justify-center">
         <!-- Botón para abrir el modal -->
