--- a/src/main/resources/templates/fragments/pie-pagina.html
+++ b/src/main/resources/templates/fragments/pie-pagina.html
@@ -1,4 +1,4 @@
-<footer th:fragment="footer" class="bg-white border-t mt-auto">
+<footer th:fragment="pie-pagina" class="bg-white border-t mt-auto">
     <div class="max-w-7xl mx-auto px-4 py-6 text-center text-gray-500 text-sm">
         &copy; <span id="actual-year"></span> Swapify. Todos los derechos reservados.
     </div>
