--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -1,7 +1,9 @@
 <th:block th:fragment="scripts">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/js/card.js"></script>
-    <script src="/js/filters.js"></script>
+
     <script src="/js/detalle.js"></script>
-    <script src="/js/footer.js"></script>
+    <script src="/js/filtros.js"></script>
+    <script src="/js/login-register.js"></script>
+    <script src="/js/pie-pagina.js"></script>
+    <script src="/js/tarjeta.js"></script>
 </th:block>
