--- a/src/main/resources/templates/publicacion/publicacion-detalle.html
+++ b/src/main/resources/templates/publicacion/publicacion-detalle.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title th:text="${publicacion.titulo}">Detalle de publicación</title>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <script src="https://cdn.tailwindcss.com"></script>
 
     </head>
@@ -12,6 +12,9 @@
         <div class="bg-white rounded-2xl shadow-xl w-full max-w-lg mx-4 max-h-[85vh] overflow-hidden flex flex-col">
 
             <div class="relative h-56 overflow-hidden">
+                <button onclick="closeModal()" class="absolute top-3 right-3 z-10 bg-white bg-opacity-80 rounded-full p-1 hover:bg-red-100 transition">
+                    <span class="material-icons text-gray-600">close</span>
+                </button>
                 <div id="carouselImages" class="flex transition-transform duration-300 h-56">
                     <img th:each="imagen : ${publicacion.imagenes}"
                          th:src="@{${imagen.url}}"
@@ -52,5 +55,6 @@
 
             </div>
         </div>
+        <th:block th:replace="~{fragments/scripts :: scripts}"></th:block>
     </body>
 </html>
