--- a/src/main/resources/templates/fragments/encabezado.html
+++ b/src/main/resources/templates/fragments/encabezado.html
@@ -1,4 +1,5 @@
-<header th:fragment="encabezado" class="bg-white shadow-sm fixed top-0 w-full z-50 h-16 border-b border-gray-200">
+<header th:fragment="encabezado"
+        class="bg-white shadow-sm fixed top-0 w-full z-50 h-16 border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full flex justify-between items-center">
         <a href="/" class="text-2xl font-bold text-indigo-600 transform hover:scale-110 transition duration-300">
             Swapify
