--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Iniciar sesión</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800">
 
