Iniciar sesión usuario

--- a/src/main/resources/templates/fragments/filtros.html
+++ b/src/main/resources/templates/fragments/filtros.html
@@ -14,7 +14,7 @@
                     Filtrar por
                     <span class="material-icons ml-2">expand_more</span>
                 </button>
-                <div class="absolute top-full mt-1 bg-white border rounded shadow w-48 z-10 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 pointer-events-auto">
+                <div id="downdrop" class="absolute top-full mt-1 bg-white border rounded shadow w-48 z-10 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 pointer-events-auto">
                     <div class="p-2 space-y-2">
                         <label class="flex items-center">
                             <input type="checkbox" name="tipo" value="bien" class="mr-2" />
