--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -1,5 +1,6 @@
 <th:block th:fragment="scripts">
     <script src="/js/detalle.js"></script>
+    <script src="/js/encabezado.js"></script>
     <script src="/js/filtros.js"></script>
     <script src="/js/login-register.js"></script>
     <script src="/js/pie-pagina.js"></script>
