--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,6 +22,12 @@
                 <!-- Formulario de registro -->
                 <form th:action="@{/register}" method="post" th:object="${usuario}" class="space-y-4">
                     <div>
+                        <label for="nombre" class="block text-sm font-medium text-gray-700">Nombre</label>
+                        <input type="text" id="nombre" th:field="*{perfil.nombre}" required
+                               class="w-full px-4 py-2 mt-1 border rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
+                    </div>
+
+                    <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Correo electrónico</label>
                         <input type="email" id="email" th:field="*{email}" required
                                class="w-full px-4 py-2 mt-1 border rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500" />
