--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Perfil</title>
-</head>
-<body>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8">
+        <title>Perfil</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+        <script src="https://cdn.tailwindcss.com"></script>
+    </head>
+    <body>
+        <th:block th:replace="~{fragments/encabezado :: encabezado}"></th:block>
 
-</body>
+        <div>
+            <label></label>
+            <input>
+        </div>
+
+        <th:block th:replace="~{fragments/pie-pagina :: pie-pagina}"></th:block>
+        <th:block th:replace="~{fragments/scripts :: scripts}"></th:block>
+    </body>
 </html>
