--- a/src/main/resources/templates/publicaciones/nueva.html
+++ b/src/main/resources/templates/publicaciones/nueva.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-white flex flex-col min-h-screen pt-[128px] bg-gray-50 text-gray-800">
+    <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800 pt-[128px]">
         <th:block th:replace="~{fragments/encabezado :: encabezado}"></th:block>
         <main class="flex-grow max-w-7xl mx-auto px-4 mt-24 sm:px-6 lg:px-8">
 
