--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800">
+    <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800 pt-[128px]">
 
         <div th:insert="fragments/encabezado :: header"></div>
 
