Create, Read, Update Perfil con vista

--- a/src/main/resources/templates/fragments/encabezado.html
+++ b/src/main/resources/templates/fragments/encabezado.html
@@ -25,7 +25,7 @@
                     </div>
                     <ul class="py-2">
                         <li>
-                            <a href="/user/profile" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center gap-2">
+                            <a href="/user/profile/read" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center gap-2">
                                 <span class="material-icons text-base">person</span> Perfil
                             </a>
                         </li>
