--- a/src/main/resources/templates/user/profile/update.html
+++ b/src/main/resources/templates/user/profile/update.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Editar Perfil</title>
+        <title>Actualizar Perfil</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
@@ -14,7 +14,7 @@
             <div class="max-w-4xl mx-auto mt-24 p-6 bg-white shadow-md rounded-lg">
                 <div class="flex justify-between items-center mb-6">
                     <h1 class="text-2xl font-semibold text-gray-800">Perfil</h1>
-                    <a href="/user/profile" class="text-indigo-600 hover:text-indigo-800 flex items-center gap-1">
+                    <a href="/user/profile/read" class="text-indigo-600 hover:text-indigo-800 flex items-center gap-1">
                         <span class="material-icons">visibility</span>
                     </a>
                 </div>
@@ -22,7 +22,7 @@
                 <form method="post" class="grid grid-cols-1 md:grid-cols-2 gap-6" th:object="${usuario.perfil}">
                     <div>
                         <label class="block text-sm font-medium text-gray-700">NIF</label>
-                        <input type="text" th:field="*{nif}" contenteditable="true"
+                        <input type="text" th:field="*{nif}" contenteditable="true" required
                                class="mt-1 w-full border px-4 py-2 rounded-lg bg-indigo-50 text-gray-700"/>
                     </div>
 
