--- a/src/main/resources/templates/user/profile/create.html
+++ b/src/main/resources/templates/user/profile/create.html
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="md:col-span-2 flex justify-end gap-4 mt-6">
-                        <a href="/user/profile"
+                        <a href="/user/profile/read"
                            class="inline-block px-5 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300 transition">
                             Cancelar
                         </a>
