--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -4,5 +4,6 @@
     <script src="/js/filtros.js"></script>
     <script src="/js/login-register.js"></script>
     <script src="/js/pie-pagina.js"></script>
+    <script src="/js/publicacion.js"></script>
     <script src="/js/tarjeta.js"></script>
 </th:block>
