--- a/src/main/resources/templates/fragments/publicaciones.html
+++ b/src/main/resources/templates/fragments/publicaciones.html
@@ -33,7 +33,7 @@
                                   class="text-right text-sm text-gray-500 mb-1"></span>
                         </div>
 
-                        <a th:href="@{'/home/' + ${publicacion.id}}"
+                        <a th:href="@{'/publicaciones/read/' + ${publicacion.id}}"
                            class="mt-4 inline-block bg-indigo-600 text-white text-sm px-4 py-2 rounded-lg hover:bg-indigo-700 transition text-center">
                             Ver más
                         </a>
