--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -9,13 +9,12 @@
     <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800 pt-[128px]">
         <th:block th:replace="~{fragments/encabezado :: encabezado}"></th:block>
 
-        <!-- Contenido principal -->
+        <!-- Contenido principal (main) -->
         <main class="flex-grow max-w-7xl w-full mx-auto px-4 sm:px-6 lg:px-8 mt-8">
-            <!-- Contenido específico de cada página aquí -->
+            <!-- Contenido específico de cada página -->
         </main>
 
         <th:block th:replace="~{fragments/pie-pagina :: pie-pagina}"></th:block>
         <th:block th:replace="~{fragments/scripts :: scripts}"></th:block>
     </body>
-
 </html>
