--- a/src/main/resources/templates/publicaciones/create.html
+++ b/src/main/resources/templates/publicaciones/create.html
@@ -16,20 +16,20 @@
                 <div class="mb-6">
                     <label class="block text-gray-700 font-semibold mb-2" for="titulo">Título</label>
                     <input type="text" id="titulo" th:field="*{titulo}" required
-                           class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                           class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-400 bg-indigo-50 text-gray-700" />
                 </div>
 
                 <div class="mb-6">
                     <label class="block text-gray-700 font-semibold mb-2" for="descripcion">Descripción</label>
                     <textarea id="descripcion" th:field="*{descripcion}" rows="4" required
-                              class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
+                              class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-400 bg-indigo-50 text-gray-700"></textarea>
                 </div>
 
                 <div class="relative mb-6">
                     <label class="block text-gray-700 font-semibold mb-2" for="precio">Precio</label>
                     <div class="relative">
                         <input type="number" id="precio" th:field="*{precio}" min="0.00" step="0.05" required
-                               class="w-full pr-10 pl-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-400"/>
+                               class="w-full pr-10 pl-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-400 bg-indigo-50 text-gray-700"/>
                         <span class="absolute inset-y-0 right-3 flex items-center text-gray-500 text-sm pointer-events-none">€</span>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
 
-                <!-- Campos adicionales según el tipo elegido por el usuario -->
+                <!-- Muestra los campos adicionales según el tipo elegido por el usuario (Bien o Servicio) -->
                 <div id="camposAdicionales"></div>
 
                 <div class="text-center mt-8">
@@ -57,7 +57,6 @@
                 </div>
             </form>
         </main>
-
 
         <th:block th:replace="~{fragments/pie-pagina :: pie-pagina}"></th:block>
         <th:block th:replace="~{fragments/scripts :: scripts}"></th:block>
